# mine

./: AUTHORS  autogen.sh  configure.ac
include/System/: acl.h  err.h  fts.h  ioctl.h  langinfo.h  locale.h  resource.h  runetype.h  signal.h  stat.h  stdio.h  stdlib.h  string.h  time.h  types.h  uio.h  unistd.h  wchar.h
include/apsl/: Libc-583.patch  architecture-258.patch  install_apsl.sh  xnu-1228.patch
include/mine/: cdefs.h  common.h  dl.h  elf.hh  func_mem_mgr.hh  log.hh  macho.hh  minedl.hh  minedl_basic.hh  minedl_elf.hh  minedl_macho.hh  misc.hh  x86_struct.hh
src/: Makefile.am
src/libs/: Makefile.am
src/libs/System/: Makefile.am  syscall.c  wrapper.c  wrapper.h
src/libs/System/clib/: user_from_uid.c
src/libs/System/locale/: mbrtowc.c  mbtowc.c  nl_langinfo.c  setlocale.c  table.c  tolower.c  wctomb.c  wcwidth.c
src/libs/System/posix1e/: acl_file.c
src/libs/System/stdio/: fclose.c  fileno.c  findfp.c  fopen.c  fprintf.c  fputs.c  fread.c  fwrite.c  printf.c  putchar.c  puts.c  snprintf.c  sprintf.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
src/libs/System/stdlib/: exit.c  getenv.c  getopt.c
src/libs/System/stdtime/: localtime.c  strftime.c
src/libs/System/string/: index.c  memcmp.c  memcpy.c  memset.c  rindex.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strdup.c  strlen.c  strmode.c  strrchr.c
src/libs/System/sys/: errno.c  geteuid.c  gettimeofday.c  getuid.c  ioctl.c  setjmp.c  unlink.c
src/libs/System/syscall/: access.c  close.c  getgid.c  getrusage.c  link.c  open.c  read.c  readlink.c  sbrk.c  stat.c  stat64.c  symlink.c  sync.c  uio.c  write.c
src/libs/gcc_s/: Makefile.am  endianness.h  int_lib.h  wrapper.c  wrapper.h
src/libs/mine/: Makefile.am  config.cc  config.hh  dl.cc  log.cc  macho.cc  minedl.cc  minedl_elf.cc  minedl_macho.cc  misc.cc  sigsegv.cc
src/loader/: Makefile.am  main.c  main.h
src/machoread/: Makefile.am  main.cc  main.hh  reader_macho.cc  reader_macho.hh
