lib_LTLIBRARIES = libSystem.B.dylib.la 
libSystem_B_dylib_la_CPPFLAGS = -mstackrealign -I@top_srcdir@/include 
libSystem_B_dylib_la_CPPFLAGS += -I@top_srcdir@/include/apsl/xnu/EXTERNAL_HEADERS 
libSystem_B_dylib_la_CPPFLAGS += -I@top_srcdir@/include/apsl/xnu/osfmk


libSystem_B_dylib_la_SOURCES = wrapper.c

libSystem_B_dylib_la_SOURCES += stdio/findfp.c
libSystem_B_dylib_la_SOURCES += stdio/puts.c
libSystem_B_dylib_la_SOURCES += stdio/fprintf.c
libSystem_B_dylib_la_SOURCES += stdio/printf.c
libSystem_B_dylib_la_SOURCES += stdio/snprintf.c
libSystem_B_dylib_la_SOURCES += stdio/sprintf.c
libSystem_B_dylib_la_SOURCES += stdio/vfprintf.c
libSystem_B_dylib_la_SOURCES += stdio/vprintf.c
libSystem_B_dylib_la_SOURCES += stdio/vsnprintf.c
libSystem_B_dylib_la_SOURCES += stdio/vsprintf.c
libSystem_B_dylib_la_SOURCES += stdio/fread.c
libSystem_B_dylib_la_SOURCES += stdio/fwrite.c
libSystem_B_dylib_la_SOURCES += stdio/fputs.c
libSystem_B_dylib_la_SOURCES += stdio/putchar.c
libSystem_B_dylib_la_SOURCES += stdio/fileno.c
libSystem_B_dylib_la_SOURCES += stdio/fopen.c
libSystem_B_dylib_la_SOURCES += stdio/fclose.c

libSystem_B_dylib_la_SOURCES += stdlib/exit.c
libSystem_B_dylib_la_SOURCES += stdlib/getenv.c
libSystem_B_dylib_la_SOURCES += stdlib/getopt.c

libSystem_B_dylib_la_SOURCES += stdtime/localtime.c
libSystem_B_dylib_la_SOURCES += stdtime/strftime.c

libSystem_B_dylib_la_SOURCES += locale/setlocale.c
libSystem_B_dylib_la_SOURCES += locale/mbrtowc.c
libSystem_B_dylib_la_SOURCES += locale/tolower.c
libSystem_B_dylib_la_SOURCES += locale/nl_langinfo.c
libSystem_B_dylib_la_SOURCES += locale/wcwidth.c
libSystem_B_dylib_la_SOURCES += locale/table.c

libSystem_B_dylib_la_SOURCES += gen/isatty.c
libSystem_B_dylib_la_SOURCES += gen/malloc.c
libSystem_B_dylib_la_SOURCES += gen/fts.c
libSystem_B_dylib_la_SOURCES += gen/signal.c
libSystem_B_dylib_la_SOURCES += gen/strtofflags.c
libSystem_B_dylib_la_SOURCES += gen/getbsize.c
libSystem_B_dylib_la_SOURCES += gen/time.c
libSystem_B_dylib_la_SOURCES += gen/err.c
libSystem_B_dylib_la_SOURCES += gen/get_compat.c

libSystem_B_dylib_la_SOURCES += sys/ioctl.c
libSystem_B_dylib_la_SOURCES += sys/geteuid.c
libSystem_B_dylib_la_SOURCES += sys/getuid.c
libSystem_B_dylib_la_SOURCES += sys/errno.c
libSystem_B_dylib_la_SOURCES += sys/setjmp.c
libSystem_B_dylib_la_SOURCES += sys/unlink.c

libSystem_B_dylib_la_SOURCES += string/memset.c
libSystem_B_dylib_la_SOURCES += string/memcpy.c
libSystem_B_dylib_la_SOURCES += string/strlen.c
libSystem_B_dylib_la_SOURCES += string/strcpy.c
libSystem_B_dylib_la_SOURCES += string/strmode.c
libSystem_B_dylib_la_SOURCES += string/strcoll.c
libSystem_B_dylib_la_SOURCES += string/strcmp.c
libSystem_B_dylib_la_SOURCES += string/strdup.c

libSystem_B_dylib_la_SOURCES += posix1e/acl_file.c

libSystem_B_dylib_la_SOURCES += syscall/stat.c
libSystem_B_dylib_la_SOURCES += syscall/stat64.c
libSystem_B_dylib_la_SOURCES += syscall/readlink.c
libSystem_B_dylib_la_SOURCES += syscall/read.c
libSystem_B_dylib_la_SOURCES += syscall/write.c
libSystem_B_dylib_la_SOURCES += syscall/open.c
libSystem_B_dylib_la_SOURCES += syscall/close.c
libSystem_B_dylib_la_SOURCES += syscall/getgid.c 
libSystem_B_dylib_la_SOURCES += syscall/uio.c 

libSystem_B_dylib_la_SOURCES += clib/user_from_uid.c 

